<resources>
    <!-- App Name -->
    <string name="app_name">Digi Service</string>
    <string name="app_name_fa">دیجی سرویس</string>

    <!-- Splash Screen -->
    <string name="reservation_system">سامانه ی جامع رزرو منابع</string>
    <string name="try_again">تلاش مجدد</string>

    <!-- Dialog Disconnect -->
    <string name="connection_fail">مشکلی در اتصال به اینترنت به وجود آمده!</string>
    <string name="disconnect_data">اینترنت موبایل</string>
    <string name="disconnect_description">اتصال شما به اینترنت برقرار نیست. برای استفاده از دیجی سرویس به اینترنت متصل شوید.</string>
    <string name="disconnect_title">عدم اتصال به اینترنت</string>
    <string name="disconnect_wifi">اینترنت Wi-Fi</string>

    <!-- API Fail message -->
    <string name="unable_to_connect_to_the_server">هنگام اتصال به سرور مشکلی وجود دارد! لطفا دوباره تلاش کنید.</string>

    <!-- Bottom Navigation View Items -->
    <string name="search">جست و جو</string>
    <string name="office">اداره ها</string>
    <string name="event">رویداد ها</string>
    <string name="news">اخبار</string>
    <string name="home">خانه</string>

    <!-- Drawer Items -->
    <string name="questions">سوالات متداول</string>
    <string name="systemGuide">راهنمای سامانه</string>
    <string name="rules">قوانین</string>
    <string name="settings">تنظیمات</string>
    <string name="aboutUs">درباره ی ما</string>
    <string name="accountManagement">مدیریت حساب کاربری</string>

    <!-- Search Fragment -->
    <string name="searchInResource">جست و جو در منابع</string>
    <string name="searchTextHint">آزمایشگاه ها , ابزار , سالن و …</string>
    <string name="space" />

    <!-- Selected Resources -->
    <string name="scheduling">زمان بندی</string>
    <string name="applying">ثبت درخواست</string>

    <!-- Page Titles -->
    <string name="pagerTitle_1">مشخصات</string>
    <string name="pagerTitle_2">نظرات</string>
    <string name="pagerTitle_3">پرسش و پاسخ</string>
    <string name="close">بستن</string>

    <string-array name="pagerTitles">
        <item>@string/pagerTitle_1</item>
        <item>@string/pagerTitle_2</item>
        <item>@string/pagerTitle_3</item>
    </string-array>

    <string name="following_information">لطفاً اطلاعات زیر را وارد نمایید.</string>
    <string name="following_password">لطفاً رمز عبور خود را وارد نمایید.</string>
    <string name="submitting">با فشردن «تایید» شما با قوانین حریم خصوصی و شرایط استفاده از دیجی سرویس موافقت می کنید.</string>
    <string name="name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="not_have_an_account">حساب کاربری ندارید؟</string>
    <string name="have_an_account">حساب کاربری دارید؟</string>
    <string name="password">رمز عبور</string>
    <string name="enter">ورود</string>
    <string name="buttonError">خطا!</string>
    <string name="enterU"><u>ورود</u></string>
    <string name="register">ثبت نام</string>
    <string name="registerU"><u>ثبت نام</u></string>
    <string name="personal_id">کد ملی</string>
    <string name="phone_number">شماره تلفن</string>
    <string name="continuation">ادامه</string>
    <string name="email">پست الکترونیک</string>
    <string name="log_out">خروج</string>

</resources>
