<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layoutDirection="ltr"
    app:cardCornerRadius="@dimen/_20sdp"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:layoutDirection="ltr"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_4sdp"
                android:layoutDirection="ltr"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_no_connection" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_weight="5"
            android:layoutDirection="ltr"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layoutDirection="ltr"
                android:text="@string/disconnect_title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />

            <TextView
                fontPath="fonts/IRANSansMobile.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center_horizontal"
                android:layoutDirection="ltr"
                android:text="@string/disconnect_description"
                android:textColor="@android:color/tertiary_text_dark"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_weight="2.5"
            android:background="@color/colorPrimary"
            android:layoutDirection="ltr"
            android:orientation="horizontal">

            <Button
                android:id="@+id/disconnect_WiFi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:layoutDirection="ltr"
                android:text="@string/disconnect_wifi"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_11ssp" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginBottom="@dimen/_6sdp"
                android:background="@android:color/white"
                android:layoutDirection="ltr" />

            <Button
                android:id="@+id/disconnect_MobileData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:layoutDirection="ltr"
                android:text="@string/disconnect_data"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>